--- a/src/app/index.html
+++ b/src/app/index.html
@@ -29,7 +29,7 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             width: 80%;
             max-width: 600px;
-            min-height: 100vh;
+            min-height: 80vh;
             /* Altura mínima para ocupar toda a tela */
             display: flex;
             flex-direction: column;
@@ -39,12 +39,13 @@
             /* Centraliza horizontalmente */
             overflow: hidden;
             /* Para esconder as partes do contêiner que ultrapassam os limites dos cantos arredondados */
+            margin-bottom: 0px;
         }
 
         .title {
             font-family: 'Satisfy', cursive;
             /* Aplicando a fonte Satisfy */
-            font-size: 7rem;
+            font-size: 5rem;
             /* Tamanho maior para o nome */
             color: darkolivegreen;
             /* Cor verde oliva para o título */
@@ -52,7 +53,7 @@
         }
 
         .subtitle {
-            font-size: 1.5rem;
+            font-size: 1.4rem;
             color: darkolivegreen;
             /* Cor verde oliva para o subtítulo */
             margin-bottom: 20px;
@@ -66,7 +67,7 @@
             /* Fundo transparente para o botão */
             border: none;
             margin-top: 20px;
-            font-size: 2rem;
+            font-size: 5rem;
             /* Tamanho do texto do botão */
             color: darkolivegreen;
             /* Cor do texto do botão */
@@ -80,7 +81,7 @@
         }
 
         .button i {
-            font-size: 3rem;
+            font-size: 7rem;
             /* Tamanho do ícone do botão */
             margin-right: 10px;
             /* Espaçamento à direita do ícone */
