--- a/src/app/index.html
+++ b/src/app/index.html
@@ -101,6 +101,7 @@
             .content {
                 width: 80%;
                 /* Reduz a largura do conteúdo para ajustar melhor em telas menores */
+                margin-bottom: 0px;
             }
 
             .title {
