adicionado imagem de fundo

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -9,8 +9,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <style>
         body {
-            background-color: forestgreen;
-            /* Cor de fundo verde floresta para o corpo */
+            background-image: url('../assets/fundo.jpg');
+            background-size: cover;
+            background-position: center;
             margin: 0;
             display: flex;
             justify-content: center;
@@ -26,7 +27,8 @@
             /* Achatando o canto superior esquerdo */
             border-top-right-radius: 50% 20%;
             /* Achatando o canto superior direito */
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2), 0 6px 6px rgba(0, 0, 0, 0.23);
+            /* Adicionando uma sombra mais pronunciada */
             width: 80%;
             max-width: 600px;
             min-height: 80vh;
