--- a/src/app/home.html
+++ b/src/app/home.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <style>
         body {
-            background-color: white;
+            background-image: url('../assets/fundo.jpg');
+            background-size: cover;
+            background-position: center;
             font-family: Arial, sans-serif;
             margin: 0;
             display: flex;
@@ -47,6 +49,8 @@
             position: relative;
             overflow: hidden;
             /* Para esconder a borda que ultrapassa o botão */
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2), 0 6px 6px rgba(0, 0, 0, 0.23);
+            /* Adicionando uma sombra mais pronunciada */
         }
 
         .button:hover {
