--- a/src/app/index.html
+++ b/src/app/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <style>
         body {
-            background-image: url('../assets/fundo.jpg');
+            background-image: url('./assets/fundo.jpg');
             background-size: cover;
             background-position: center;
             margin: 0;
