--- a/src/app/home.html
+++ b/src/app/home.html
@@ -89,7 +89,7 @@
             <i class="fas fa-check"></i> <!-- Ícone do Font Awesome para um check -->
             <span>Confirmação</span>
         </a>
-        <a href="https://www.google.com/maps/dir/Rod.+Jo%C3%A3o+Marcelo+-+Vila+S%C3%A3o+Jos%C3%A9,+I%C3%A7ara+-+SC,+88820-000/@-28.7430005,-49.3913991,12z/"
+        <a href="https://abrir.link/zjsDp"
             target="_blank" class="button">
             <i class="fas fa-map-marker-alt"></i> <!-- Ícone do Font Awesome para localização -->
             <span>Localização</span>
