--- a/src/app/index.html
+++ b/src/app/index.html
@@ -104,7 +104,7 @@
                 width: 80%;
                 /* Reduz a largura do conteúdo para ajustar melhor em telas menores */
                 margin-bottom: 0px;
-                min-height: 50vh;
+                max-height: 50vh;
             }
 
             .title {
