alerta de implementação

--- a/src/app/home.html
+++ b/src/app/home.html
@@ -81,16 +81,20 @@
             /* Evita quebrar a linha */
         }
     </style>
+    <script>
+        function showAlert() {
+            alert('A funcionalidade de confirmação de presença ainda não foi implementada.');
+        }
+    </script>
 </head>
 
 <body>
     <div class="buttons-container">
-        <a href="#" target="_blank" class="button">
+        <a href="#" target="_blank" class="button" onclick="showAlert()">
             <i class="fas fa-check"></i> <!-- Ícone do Font Awesome para um check -->
             <span>Confirmação</span>
         </a>
-        <a href="https://abrir.link/zjsDp"
-            target="_blank" class="button">
+        <a href="https://abrir.link/zjsDp" target="_blank" class="button">
             <i class="fas fa-map-marker-alt"></i> <!-- Ícone do Font Awesome para localização -->
             <span>Localização</span>
         </a>
