implementado confirmação de convidado

--- a/src/app/home.html
+++ b/src/app/home.html
@@ -90,7 +90,8 @@
 
 <body>
     <div class="buttons-container">
-        <a href="#" target="_blank" class="button" onclick="showAlert()">
+        <!-- <a href="confirm.html" target="_blank" class="button" onclick="showAlert()"> -->
+        <a href="confirm.html" target="_blank" class="button">
             <i class="fas fa-check"></i> <!-- Ícone do Font Awesome para um check -->
             <span>Confirmação</span>
         </a>
