atualização de codigo

--- a/src/app/confirm.html
+++ b/src/app/confirm.html
@@ -72,7 +72,7 @@
             })
             .then(response => {
                 alert('Confirmação enviada com sucesso!');
-                window.location.href = `https://wa.me/55${phone}?text=Olá%2C+${name}%21+Obrigado+por+confirmar+sua+presença+em+nosso+casamento.`;
+                window.location.href = `https://wa.me/5548996193227?text=Olá%2C+meu+nome+é+${name}+e+confirmo+minha+presença+no+casamento.+Obrigado+por+me+convidar.`;
             })
             .catch(error => {
                 console.error('Erro:', error);
